@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-10-2002 nonchocoboy JCCL C++ config code loads in included files relative
+                        to the file that included it.
 Sep-29-2002 nonchocoboy Build and install the ConfigUpdater tool.
                         NEW VERSION: 0.9.2
 Sep-27-2002 nonchocoboy Implemented editors for modifying a ChunkDesc's name,
